Update CSS and fix overflow issue in ListingCard and Navbar components

--- a/client/src/assets/globals.css
+++ b/client/src/assets/globals.css
@@ -14,7 +14,7 @@ body {
     width: 80px;
     height: 5px;
     position: absolute;
-    top: 4%;
+    top: 15%;
     left: calc(50% - 10px);
     transform: rotate(0deg);
     animation: 10s seconds linear infinite;
